test/conformance/chainsaw/generating-policies/foreach/data/data-filtered-resource/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: filtered-ns-1
---
apiVersion: v1
kind: Namespace
metadata:
  name: filtered-ns-2
---
apiVersion: v1
kind: Namespace
metadata:
  name: filtered-ns-3
