test/conformance/chainsaw/generating-policies/foreach/data/data-filtered-resource/trigger.yaml
kind: ConfigMap
apiVersion: v1
metadata:
  name: foreach-data-filtered-resource
  namespace: default
data:
  namespaces: filtered-ns-1,filtered-ns-2,filtered-ns-3
