test/conformance/chainsaw/generating-policies/foreach/data/data-filtered-resource/downstream-error.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: filtered-np-1
  namespace: filtered-ns-2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
